hotfix: fixed z-index of aside menu

--- a/src/styles/asideMenu.css
+++ b/src/styles/asideMenu.css
@@ -1,6 +1,6 @@
 /* General Aside Menu Styles */
 .aside-menu {
-  z-index: 1;
+  z-index: 2;
   position: fixed;
   top: 0;
   left: -250px;
